# RottenBot_InferenceService

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.mlflow  README.md  docker-compose.yaml  info.txt  pyproject.toml  test_api.py
.github/workflows/: ci.yaml
model/: MLmodel  conda.yaml  index_to_class.json  input_example.json  python_env.yaml  registered_model_meta
src/: __init__.py  config.py  main.py
src/db/: main.py  redis.py
src/inference/: dependencies.py  models.py  routes.py  schemas.py  service.py  setup_observability.py  setup_tracing_logging.py  utils.py
src/models/: user.py
src/utils/: load_model.py
