[project]
name = "rotten-bot-inference"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "boto3>=1.35.0",
    "fastapi[standard]>=0.117.1",
    "ipykernel>=6.30.1",
    "mlflow>=3.4.0",
    "pydantic-settings>=2.10.1",
    "sqlmodel>=0.0.25",
    "tensorflow[and-cuda]>=2.20.0",
]
